@@ -1,0 +1,5 @@
+class AddFolderToDownloaders < ActiveRecord::Migration
+  def change
+    add_column :downloaders, :folder, :string
+  end
+end
